Fixes header on small devices

--- a/src/components/header-navigation.module.css
+++ b/src/components/header-navigation.module.css
@@ -1,7 +1,7 @@
 .nav-element {
   list-style-type: none;
   display: inline;
-  padding: 0 10px;
+  padding-right: 10px;
 }
 
 .nav-element a {
