--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,7 +1,24 @@
 .container {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  margin: 40px 0;
+  margin: 0;
+}
+
+@media (min-width: 425px) {
+  .container {
+    margin: 20px 0;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    flex-direction: row;
+  }
+
+  nav ul {
+    padding-inline-start: 0;
+  }
 }
 
 .author {
