--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -12,6 +12,10 @@ a {
   color: #ff0f00;
 }
 
+.container {
+  overflow-x: hidden;
+}
+
 @media (max-width: 800px) {
   body {
     margin-left: 20px;
